registration_App/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: registration-app
  namespace: registration

spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: registration-app

  template:
    metadata:
      labels:
        app: registration-app

    spec:

      containers:
        - name: registration-app

          image: <AWS_ACCOUNT_ID>.dkr.ecr.ap-south-1.amazonaws.com/registration-app:<IMAGE_TAG>

          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 5000
              protocol: TCP

          # Load all variables from ConfigMap and Secret
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: http

            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http

            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          securityContext:
            allowPrivilegeEscalation: false

            capabilities:
              drop:
                - ALL
