registration_App/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: registration-app
  namespace: registration

spec:
  type: ClusterIP

  selector:
    app: registration-app

  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
